# CleanColkHashChecker

./: README.md  pyproject.toml
src/common/designs/: singleton.py
src/common/domain/: base.py
src/common/interactor/: interface.py
src/common/libraries/pydantic/: config.py  validators.py
