[tool.poetry]
name = "cleancolkhashchecker"
version = "0.0.0"
description = "A simple GUI file hash checker."
authors = ["Colk-tech <iam@colk.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
injector = "^0.21.0"
flet = "^0.10.2"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
types-python-dateutil = "^2.8.19.14"
types-pytz = "^2023.3.1.1"
pytest = "^7.4.2"
mocker = "^1.1.1"
freezegun = "^1.2.2"
pytest-env = "^1.0.1"
pytest-dotenv = "^0.5.2"
pytest-html = "^4.0.2"
pytest-cov = "^4.1.0"
pip-licenses = "^4.3.3"
setuptools = "^68.2.2"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_no_return = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = "migrations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
